k8s/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: employee-app
  namespace: employee-app

spec:
  replicas: 3

  selector:
    matchLabels:
      app: employee-app

  template:
    metadata:
      labels:
        app: employee-app

    spec:
      containers:
        - name: employee-app

          image: salahhamdy110/employee-management:v6
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3

          volumeMounts:
            - name: uploads-storage
              mountPath: /app/public/uploads

      volumes:
        - name: uploads-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
