k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: employee-app
  labels:
    app: employee-app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: employee-app

  template:
    metadata:
      labels:
        app: employee-app

    spec:
      containers:

      - name: employee-app

        image: salahhamdy110/project:latest

        imagePullPolicy: Always

        ports:
        - containerPort: 3000
