k8s/app-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service
  namespace: employee-app

spec:
  selector:
    app: employee-app

  type: NodePort

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 30080
