k8s/employee-servicemonitor.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service
  namespace: employee-app
  labels:
    app: employee-app

spec:
  type: NodePort

  selector:
    app: employee-app

  ports:
    - name: http
      port: 3000
      targetPort: 3000
      nodePort: 30080
