k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: employee-service

spec:

  type: NodePort

  selector:
    app: employee-app

  ports:

  - port: 3000

    targetPort: 3000

    nodePort: 30081
