k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-ingress
  namespace: employee-app
spec:
  ingressClassName: nginx

  rules:
  - host: employee.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: employee-service
            port:
              number: 3000
